Fixed compiling error where targeting j8 but used j17 method.